--- a/pages/content/amp-dev/documentation/examples/index.html
+++ b/pages/content/amp-dev/documentation/examples/index.html
@@ -1,5 +1,5 @@
 ---
-$title: AMP [= format|capitalize =] Examples
+$title: ABC [= format|capitalize =] Examples
 $titles:
   navigation: Examples
   teaser: Examples.
@@ -10,7 +10,7 @@ $localization:
 $hidden: true
 
 flyout:
-  description: Hands-on introduction to AMP
+  description: Hands-on introduction to ABC
   icon: examples-flyout
 teaser:
   image:
@@ -18,14 +18,14 @@ teaser:
     width: 1
     height: 1
     alt: lorem ipsum
-  text: AMP By Example provides hands-on samples and a playground for using AMP components.
+  text: ABC By Example provides hands-on samples and a playground for using ABC components.
 
 examples:
   websites:
     - components:
       icon_name: code
       headline: Components
-      text: Create every content, layout and feature on your website with an AMP component.
+      text: Create every content, layout and feature on your website with an ABC component.
       links:
         - /content/amp-dev/documentation/examples/documentation/amp-autocomplete.html
         - /content/amp-dev/documentation/examples/documentation/amp-bind.html
@@ -53,7 +53,7 @@ examples:
     - components:
       icon_name: code
       headline: Components
-      text: Create every content, layout and feature on your website with an AMP component.
+      text: Create every content, layout and feature on your website with an ABC component.
       links:
         - /content/amp-dev/documentation/examples/documentation/Stories_in_AMP.html
         - /content/amp-dev/documentation/examples/documentation/amp-video.html
@@ -71,7 +71,7 @@ examples:
     - analytics:
       icon_name: bar-chart-money
       headline: Monetization & Analytics
-      text: Make more out of your AMP pages through analytics, optimal delivery and caching.
+      text: Make more out of your ABC pages through analytics, optimal delivery and caching.
       links:
         - /content/amp-dev/documentation/examples/previews/Story_User_Consent.html
         - /content/amp-dev/documentation/examples/previews/Doubleclick_AMP_Story_Ads.html
@@ -80,7 +80,7 @@ examples:
     - components:
       icon_name: code
       headline: Components
-      text: Create every content, layout and feature on your website with an AMP component.
+      text: Create every content, layout and feature on your website with an ABC component.
       links:
         - /content/amp-dev/documentation/examples/documentation/amp-bind.html
         - /content/amp-dev/documentation/examples/documentation/amp-carousel.html
@@ -108,7 +108,7 @@ examples:
     - components:
       icon_name: code
       headline: Components
-      text: Create every content, layout and feature on your website with an AMP component.
+      text: Create every content, layout and feature on your website with an ABC component.
       links:
         - /content/amp-dev/documentation/examples/previews/amp-accordion.html
         - /content/amp-dev/documentation/examples/documentation/amp-bind.html
@@ -194,8 +194,8 @@ recent_examples:
       {% do doc.styles.addCssFile('/css/components/molecules/teaser-info.css') %}
       <section class="ap-m-teaser-info">
         <div class="ap-m-teaser-info-text">
-          <h2>{{ _('AMP Playground') }}</h2>
-          <p>{{ _('Try it yourself with the AMP Playground. Test your ideas directly in the browser and get instant feedback.') }}</p>
+          <h2>{{ _('ABC Playground') }}</h2>
+          <p>{{ _('Try it yourself with the ABC Playground. Test your ideas directly in the browser and get instant feedback.') }}</p>
           <a class="ap-m-lnk ap-m-lnk-square"
              [% if format == 'websites' %]
              href="https://playground.amp.dev/"
@@ -211,7 +211,7 @@ recent_examples:
               {% do doc.icons.useIcon('icons/internal.svg') %}
               <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#internal"></use></svg>
             </div>
-            <span class="ap-m-lnk-text">{{ _('Open in AMP Playground') }}</span>
+            <span class="ap-m-lnk-text">{{ _('Open in ABC Playground') }}</span>
           </a>
         </div>
         <div class="ap-m-teaser-info-image">
