--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -8,54 +8,54 @@ description: Knowledge graph applications for industry, science and government.
 format_explainer:
   - name: electronic-label
     headline: Electronic Labels
-    description: "Creating electronic labels with detailed product information in machine-readable format for humans & other intelligent machines."
-    link: "All about Electronic Labels"
+    description: 'Creating electronic labels with detailed product information in machine-readable format for humans & other intelligent machines.'
+    link: 'All about Electronic Labels'
     url: /
   - name: daily-food
     headline: Daily Food
-    description: "Serving detailed information about human food and meals, pet food and animal feed in machine-readable format. Storing intake history in your personal Biograph - companion to your Electronic Health Record."
-    link: "All about Daily Food"
+    description: 'Serving detailed information about human food and meals, pet food and animal feed in machine-readable format. Storing intake history in your personal Biograph - companion to your Electronic Health Record.'
+    link: 'All about Daily Food'
     url: /
   - name: export-import-data
     headline: Export Import Data
-    description: "Creating electronic Product Passports for presentation to government organizations administering border control policies and tariffs."
-    link: "All about Export Import Data"
+    description: 'Creating electronic Product Passports for presentation to government organizations administering border control policies and tariffs.'
+    link: 'All about Export Import Data'
     url: /
   - name: daily-care
     headline: Daily Care
-    description: "Serving detailed information about cosmetics, textiles, and household chemicals in machine&#x2010;readable format. Storing exposure and contact history in your personal Biograph."
-    link: "All about Daily Care"
+    description: 'Serving detailed information about cosmetics, textiles, and household chemicals in machine&#x2010;readable format. Storing exposure and contact history in your personal Biograph.'
+    link: 'All about Daily Care'
     url: /
   - name: food-data-institute
     headline: Food Data Institute
-    description: "Developing data specifications for food & agriculture. Serving repositories for recording and comparing research data and discovering new solutions."
-    link: "All about Food Data Institute"
+    description: 'Developing data specifications for food & agriculture. Serving repositories for recording and comparing research data and discovering new solutions.'
+    link: 'All about Food Data Institute'
     url: /
   - name: ontomatica
     headline: Ontomatica
-    description: "Creating machine-readable information about foods, drugs, cosmetics, textiles, chemicals and commodities for selling in local, national and international markets."
-    link: "All about Ontomatica"
+    description: 'Creating machine-readable information about foods, drugs, cosmetics, textiles, chemicals and commodities for selling in local, national and international markets.'
+    link: 'All about Ontomatica'
     url: /
 
 cards:
   - icon: icon-ontomatica
     headline: Simplify development of knowledge graph applications
-    text: "Develop applications using structured data and functional programming. Share data using curated data definitions and datasets. Improve dataset quality using visualization and machine-reasoning. Keep everything synchronized using Plato (Platform for ontologies)."
+    text: 'Develop applications using structured data and functional programming. Share data using curated data definitions and datasets. Improve dataset quality using visualization and machine-reasoning. Keep everything synchronized using Plato (Platform for ontologies).'
   - icon: icon-daily-food
     headline: Monitor food & drug biochemistry
-    text: "Monitor component intake over days, weeks, months, and years using electronic data about food and drugs. Query composition and formulation information that is not available on printed labels. Pet owners monitor food and medicine for their companions. Determine links between food intake and health outcomes."
+    text: 'Monitor component intake over days, weeks, months, and years using electronic data about food and drugs. Query composition and formulation information that is not available on printed labels. Pet owners monitor food and medicine for their companions. Determine links between food intake and health outcomes.'
   - icon: icon-daily-care
     headline: Monitor cosmetics, textile & household chemical biochemistry
-    text: "Monitor use and exposure to components over days, weeks, months, and years using electronic data about cosmetics, textiles and household chemicals. Query chemical and fiber information that is not available on a printed label. Determine links between use/exposure and health outcomes."
+    text: 'Monitor use and exposure to components over days, weeks, months, and years using electronic data about cosmetics, textiles and household chemicals. Query chemical and fiber information that is not available on a printed label. Determine links between use/exposure and health outcomes.'
   - icon: icon-electronic-label
     headline: Define product identity and impede counterfeits
-    text: "Use electronic product identity to impede counterfeit products and claims. Create a new label by combining existing labels and adding new information. Improve machine-automation by using structured data to control machine-operations. Example: agriculture equipment calibrated by chemical formulations and environmental conditions."
+    text: 'Use electronic product identity to impede counterfeit products and claims. Create a new label by combining existing labels and adding new information. Improve machine-automation by using structured data to control machine-operations. Example: agriculture equipment calibrated by chemical formulations and environmental conditions.'
   - icon: icon-export-import-data
     headline: Be a friend to Authorities
-    text: "Product Passport is an electronic companion to paper documents such as an Invoice, Bill of Lading, and Material Safety Data Sheet. Authorities have specific local rules and tariffs. Examples: USA/California, European Union, Great Britain, Saudi Arabia, India. Product Passport enables automated verification of global and local rules for imports and exports."
+    text: 'Product Passport is an electronic companion to paper documents such as an Invoice, Bill of Lading, and Material Safety Data Sheet. Authorities have specific local rules and tariffs. Examples: USA/California, European Union, Great Britain, Saudi Arabia, India. Product Passport enables automated verification of global and local rules for imports and exports.'
   - icon: icon-food-data-institute
     headline: Open standards & open data research
-    text: "Transform data from individual scientific studies into shared data repositories. Discover new solutions by comparing data from multiple studies. National organizations synchronize local and international research. Example: FDI-USA shares data with FDI-CAN (Canada), FDI-GBR (Great Britain), FDI-SAU (Saudi Arabia), FDI-IND (India), and others."
+    text: 'Transform data from individual scientific studies into shared data repositories. Discover new solutions by comparing data from multiple studies. National organizations synchronize local and international research. Example: FDI-USA shares data with FDI-CAN (Canada), FDI-GBR (Great Britain), FDI-SAU (Saudi Arabia), FDI-IND (India), and others.'
 
 success_stories:
   - !g.doc /content/amp-dev/romeo/0/23-10-01.yaml
