corrected double views

--- a/pages/content/amp-dev/about/rdf-in-fifty.html
+++ b/pages/content/amp-dev/about/rdf-in-fifty.html
@@ -2,7 +2,7 @@
 $title: RDF in Fifty Words or Less
 $order: 1
 descriptions: RDF in Fifty Words or Less
-$view: $view: /views/2021/base.html
+$view: /views/2021/base.html
 ---
 {% do doc.styles.addCssFile('css/components/templates/custom-content.css') %}
 {% do doc.styles.addCssFile('css/components/molecules/code-snippet.css') %}
