--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -160,7 +160,7 @@ success_stories:
 
   <section class="ap-center-stage">
     <div class="ap-center-stage-content">
-      <h2 class="ap-h2">{{ _('New technology should aspire to accomplish two goals:') }}</h2>
+      <h2 class="ap-h2">{{ _('New technology should aspire to accomplish two goals&#x3a;') }}</h2>
       <h3 class="">
         {{ _('Take an existing business process and significantly reduce its total cost of implementation.') }}
       </h3>
