--- a/pages/content/amp-dev/about/rdf-in-fifty.html
+++ b/pages/content/amp-dev/about/rdf-in-fifty.html
@@ -28,7 +28,7 @@ $view: /views/2021/base.html
         <p>{{ _('But a web page is just one kind of Internet resource. There are tonnes of others, including email messages, UseNet news articles (or entire UseNet news groups), and search results from your favourite web crawler, just to name a few. And fundamentally, there"s no reason that you shouldn"t be able to treat these as &#x201C;bookmarks&#x201D; as well, grouping them together into folders as you please, or maybe even creating &#x201C;smart&#x201D; folders that, when you open them, dynamically generate their contents by running common search that you define.') }}</p>
         <p>{{ _('And a &#x201C;bookmark&#x201D; could really have arbitrary properties associated with it: you might want to invent your own &#x201C;classification&#x201D; scheme for a bookmark <i>a la</i> Macintosh"s &#x201C;hot&#x201D;, &#x201C;warm&#x201D;, &#x201C;cool&#x201D; colour coding. Or you might want to relate a bookmark to another bookmark, or keep it in multiple &#x201C;folders&#x201D; at once.') }}</p>
         <p>{{ _('The RDF graph provides a perfect data model upon which to build a &#x201C;universal&#x201D; bookmarking service as described above: the graph can contain pointers to arbitrary resources and can group them in just about any way that you can imagine.') }}</p>
-        <p>{{ _('But wait, there"s more...') }}</p>
+        <p>{{ _('But wait, there's more...') }}</p>
     </div>
 
     <div class="ap-m-copy ap-m-copy-center-small">
