updated format rdf-in-fifty

--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -229,7 +229,7 @@ success_stories:
       {% with %}
         {% set square = true %}
         {% set href = "romeo/0/index.html" %}
-        {% set text = _("See all case studies") %}
+        {% set text = _('See all case studies') %}
         {% include '/views/2021/partials/content/link.j2' %}
       {% endwith %}
     </div>
