--- a/pages/content/amp-dev/about/rdf-in-fifty.html
+++ b/pages/content/amp-dev/about/rdf-in-fifty.html
@@ -11,37 +11,37 @@ flyout:
 ---
 
 <main>
-
-<section class="ap-section">
-  <div class="ap-logo-stage-content">
-    <div class="ap-logo-stage-logo">
-      {% do doc.icons.useIcon('/icons/code-architecture.svg') %}
-      <svg>
-        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#code-architecture"></use>
-      </svg>
+  <section class="ap-logo-stage">
+    <div class="ap-logo-stage-content">
+      <div class="ap-logo-stage-logo">
+          {% do doc.icons.useIcon('/icons/amp-websites.svg') %}
+          <div class="ap-circular-icon --websites">
+            <svg>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#amp-websites"></use>
+            </svg>
+          </div>
+      </div>
     </div>
-  </div>
+    <div class="ap-text-block">
+      <h1 class="ap-h1 ap-logo-stage-headline">{{ _('RDF in Fifty Words or Less') }}</h1>
+    </div>
+  </section>
 
-  <div class="ap-text-block">
-    <h1 class="ap-h1 ap-logo-stage-headline">{{ _('RDF in Fifty Words or Less') }}</h1>
-  </div>
-</section>
-
-<section class="ap-section --col-4-15">
-  <div class="ap-text-media">
-    <div class="ap-text-media-col">
+  <section class="ap-section ap-text-aside">
+    <div class="ap-text-aside-item --start">
       <div class="ap-text-block">
         <p>
-        {{ _('Okay, so maybe this is a bit more than fifty words, but the key points are pretty simple (and put into <b>bold text</b> for you manager&#x2013;types who just want to get straight to the point). The <a href="https://en.wikipedia.org/wiki/Resource_Description_Framework"><i>Resource Description Framework</i></a>, or &#x201C;RDF&#x201D;, is really two things.') }}
+          {{ _('Okay, so maybe this is a bit more than fifty words, but the key points are pretty simple (and put into <b>bold text</b> for you manager&#x2013;types who just want to get straight to the point). The <a href="https://en.wikipedia.org/wiki/Resource_Description_Framework"><i>Resource Description Framework</i></a>, or &#x201C;RDF&#x201D;, is really two things.') }}
         </p>
       </div>
-
       <div class="ap-text-block">
-        <h2 class="ap-h2 ap-center-stage-headline">
+        <h2>
         {{ _('First, RDF is a graph&#x2013;based model for describing Internet <i>resources</i> (like web pages and email messages), and how these resources relate to one another.') }}
         </h2>
       </div>
+    </div>
 
+    <div class="ap-text-aside-item --right">
       <div class="ap-text-block">
         <p>
         {{ _('But what does that mean, <i>really</i>? To a developer, it means that the RDF data model (the &#x201C;graph&#x201D;) can be used as a mechanism for integrating and organising Internet resources.') }}
@@ -60,13 +60,14 @@ flyout:
         <p>{{ _('But wait, there\'s more...') }}
         </p>
       </div>
+    </div>
 
+    <div class="ap-text-aside-item --end">
       <div class="ap-text-block">
-        <h2 class="ap-h2 ap-center-stage-headline">
+        <h2>
         {{ _('Second, RDF is a serialisation syntax. This syntax allows the graph&#x2013;like model to be communicated between &#x201C;agents&#x201D;.') }}
         </h2>
       </div>
-
       <div class="ap-text-block">
         <p>
         {{ _('Okay, what the heck does <i>that</i> mean? Fundamentally, it means that parts of the RDF data model can be communicated across network boundaries, and the contents of the graph can dynamically change as information arrives from a remote service.') }}
@@ -78,19 +79,16 @@ flyout:
         {{ _('But how did that happen? The inbox &#x201C;folder&#x201D; was really just a pointer to an Internet resource that contains more RDF that extends the graph. That &#x201C;Internet resource&#x201D; was a URI that pointed to a CGI script (say, &lt;code&gt;<span>http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&amp;folder=inbox</span>&lt;/code&gt;). The CGI script actually generates <i>serialised RDF</i>, which is basically just a way of formatting a graph into <a href="https://developer.mozilla.org/en-US/docs/XML_introduction">XML</a>:') }}
         </p>
       </div>
-    
       <div class="ap-text-block">
         <div class="code-snippet">
           <pre><code><span><span><span>&lt;</span><span>rdf:</span>RDF</span><br>&nbsp;&nbsp;&nbsp;<span><span>xmlns:</span>rdf</span><span><span>=</span><span>&quot;</span>http://www.w3.org/1999/02/22-rdf-syntax-ns#<span>&quot;</span></span><br>&nbsp;&nbsp;&nbsp;<span><span>xmlns:</span>sm</span><span><span>=</span><span>&quot;</span>http://www.mozilla.org/smart-mail/schema#<span>&quot;</span></span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;<span><span>xmlns:</span>schema</span><span><span>=</span><span>&quot;</span>https://schema.org/<span>&quot;</span></span><span>&gt;</span><br>&nbsp;<span><span><span>&lt;</span><span>rdf:</span>Description</span> <span>rdf:nodeID</span><span><span>=</span><span>&quot;</span>n-101<span>&quot;</span></span><br>&nbsp;&nbsp;&nbsp;<span>about</span><span><span>=</span><span>&quot;</span>http://www.mozilla.org/smart-mail/get-mail.cgi?user<span>=</span>waterson&amp;folder<span>=</span>inbox<span>&quot;</span></span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>sm:</span>message</span> <span>id</span><span><span>=</span><span>&quot;</span>4025293<span>&quot;</span></span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>sm:</span>recipient</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Chris Waterson &quot;waterson@google.com&quot;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;/</span><span>sm:</span>recipient</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>sm:</span>sender</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Aunt Helga &quot;helga@ancestry.net&quot;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;/</span><span>sm:</span>sender</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>sm:</span>received-by</span><span>&gt;</span></span>x-wing.mcom.com<span><span><span>&lt;/</span><span>sm:</span>received-by</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>sm:</span>subject</span><span>&gt;</span></span>Great recipe for Banana Bread<span><span><span>&lt;/</span><span>sm:</span>subject</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>sm:</span>body</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>rdf:</span>Description</span> <span>rdf:nodeID</span><span><span>=</span><span>&quot;</span>n-201<span>&quot;</span></span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>schema:</span>name</span><span>&gt;</span></span>Aunt Helga"s World Famous Banana Bread<span><span><span>&lt;/</span><span>schema:</span>name</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>schema:</span>recipeInstructions</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preheat the oven to 350 degrees. Mix in the ingredients in a bowl.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Add the flour last.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pour the mixture into a loaf pan and bake for one hour.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;/</span><span>schema:</span>recipeInstructions</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>schema:</span>recipeIngredient</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3 or 4 ripe bananas, smashed.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;/</span><span>schema:</span>recipeIngredient</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>schema:</span>recipeIngredient</span><span>&gt;</span></span>1 egg<span><span><span>&lt;/</span><span>schema:</span>recipeIngredient</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>schema:</span>recipeIngredient</span><span>&gt;</span></span>3/4 cup of sugar<span><span><span>&lt;/</span><span>schema:</span>recipeIngredient</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>schema:</span>suitableForDiet</span><span>&gt;</span></span>http://schema.org/LowFatDiet<span><span><span>&lt;/</span><span>schema:</span>suitableForDiet</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>schema:</span>cookTime</span><span>&gt;</span></span>PT1H<span><span><span>&lt;/</span><span>schema:</span>cookTime</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>schema:</span>recipeYield</span><span>&gt;</span></span>1 loaf<span><span><span>&lt;/</span><span>schema:</span>recipeYield</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>schema:</span>prepTime</span><span>&gt;</span></span>PT15M<span><span><span>&lt;/</span><span>schema:</span>prepTime</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>rdf:</span>type</span> <span>rdf:resource</span><span><span>=</span><span>&quot;</span>http://schema.org/Recipe<span>&quot;</span></span><span>/&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>schema:</span>nutrition</span> <span>rdf:nodeID</span><span><span>=</span><span>&quot;</span>n-202<span>&quot;</span></span><span>/&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>/rdf:</span>Description</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>rdf:</span>Description</span> <span>rdf:nodeID</span><span><span>=</span><span>&quot;</span>n-301<span>&quot;</span></span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>rdf:</span>type</span> <span>rdf:resource</span><span><span>=</span><span>&quot;</span>http://schema.org/NutritionInformation<span>&quot;</span></span><span>/&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>schema:</span>fatContent</span><span>&gt;</span></span>9 grams fat<span><span><span>&lt;/</span><span>schema:</span>fatContent</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>schema:</span>calories</span><span>&gt;</span></span>240 calories<span><span><span>&lt;/</span><span>schema:</span>calories</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>/rdf:</span>Description</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;/</span><span>sm:</span>body</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;<span><span><span>&lt;/</span><span>sm:</span>message</span><span>&gt;</span></span><br>&nbsp;<span><span><span>&lt;/</span><span>rdf:</span>Description</span><span>&gt;</span></span><br><span><span><span>&lt;/</span><span>rdf:</span>RDF</span><span>&gt;</span></span><span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></span></code></pre>
         </div>
       </div>
-
       <div class="ap-text-block">
         <p>
         {{ _('Upon receipt of the above monstrosity, the RDF engine folds the RDF into the graph at the appropriate place, and the tree control that actually implements the UI to the bookmarks is notified that it should begin drawing some icons for the latest message about Banana Bread from Aunt Helga.') }}
         </p>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 </main>
