--- a/pages/content/amp-dev/about/rdf-in-fifty.html
+++ b/pages/content/amp-dev/about/rdf-in-fifty.html
@@ -47,17 +47,17 @@ flyout:
         {{ _('But what does that mean, <i>really</i>? To a developer, it means that the RDF data model (the &#x201C;graph&#x201D;) can be used as a mechanism for integrating and organising Internet resources.') }}
         </p>
         <p>
-        {{ _('Let\'s look at an example: <i>bookmarks</i>. Right now, most web browsers let you organise your bookmarks hierarchically into <i>folders</i>. Each bookmark is a <i>pointer</i> to a web page called a <b>URI</b> (<b>U</b>niform <b>R</b>esource <b>I</b>dentifier).') }}
+        {{ _('Let&#x0027;s look at an example: <i>bookmarks</i>. Right now, most web browsers let you organise your bookmarks hierarchically into <i>folders</i>. Each bookmark is a <i>pointer</i> to a web page called a <b>URI</b> (<b>U</b>niform <b>R</b>esource <b>I</b>dentifier).') }}
         </p>
         <p>
-        {{ _('But a web page is just one kind of Internet resource. There are tonnes of others, including email messages, UseNet news articles (or entire UseNet news groups), and search results from your favourite web crawler, just to name a few. And fundamentally, there\'s no reason that you shouldn\'t be able to treat these as &#x201C;bookmarks&#x201D; as well, grouping them together into folders as you please, or maybe even creating &#x201C;smart&#x201D; folders that, when you open them, dynamically generate their contents by running common search that you define.') }}
+        {{ _('But a web page is just one kind of Internet resource. There are tons of others, including email messages, reddit articles, RSS feeds, and search results from your favorite web crawler, just to name a few. And fundamentally, there&#x0027;s no reason that you shouldn&#x0027;t be able to treat these as &#x201C;bookmarks&#x201D; as well, grouping them together into folders as you please, or maybe even creating &#x201C;smart&#x201D; folders that, when you open them, dynamically generate their contents by running common search that you define.') }}
         </p>
         <p>
-        {{ _('And a &#x201C;bookmark&#x201D; could really have arbitrary properties associated with it: you might want to invent your own &#x201C;classification&#x201D; scheme for a bookmark <i>a la</i> Macintosh\'s &#x201C;hot&#x201D;, &#x201C;warm&#x201D;, &#x201C;cool&#x201D; colour coding. Or you might want to relate a bookmark to another bookmark, or keep it in multiple &#x201C;folders&#x201D; at once.') }}
+        {{ _('And a &#x201C;bookmark&#x201D; could really have arbitrary properties associated with it: you might want to invent your own &#x201C;classification&#x201D; scheme for a bookmark <i>a la</i> Macintosh&#x0027;s &#x201C;hot&#x201D;, &#x201C;warm&#x201D;, &#x201C;cool&#x201D; colour coding. Or you might want to relate a bookmark to another bookmark, or keep it in multiple &#x201C;folders&#x201D; at once.') }}
         </p>
         <p>
         {{ _('The RDF graph provides a perfect data model upon which to build a &#x201C;universal&#x201D; bookmarking service as described above: the graph can contain pointers to arbitrary resources and can group them in just about any way that you can imagine.') }}</p>
-        <p>{{ _('But wait, there\'s more...') }}
+        <p>{{ _('But wait, there&#x0027;s more...') }}
         </p>
       </div>
     </div>
@@ -65,7 +65,7 @@ flyout:
     <div class="ap-text-aside-item --end">
       <div class="ap-text-block">
         <h2>
-        {{ _('Second, RDF is a serialisation syntax. This syntax allows the graph&#x2013;like model to be communicated between &#x201C;agents&#x201D;.') }}
+        {{ _('Second, RDF is a serialization syntax. This syntax allows the graph&#x2013;like model to be communicated between &#x201C;agents&#x201D;.') }}
         </h2>
       </div>
       <div class="ap-text-block">
@@ -73,7 +73,7 @@ flyout:
         {{ _('Okay, what the heck does <i>that</i> mean? Fundamentally, it means that parts of the RDF data model can be communicated across network boundaries, and the contents of the graph can dynamically change as information arrives from a remote service.') }}
         </p>
         <p>
-        {{ _('Let\'s go back to our bookmark example. Say that one of my bookmark &#x201C;folders&#x201D; is really a pointer to my email inbox: when I open that folder, &#x76;&#x6f;&#x69;&#x6c;&#xe0;! All the messages that I\'ve received over night appear.') }}
+        {{ _('Let&#x0027;s go back to our bookmark example. Say that one of my bookmark &#x201C;folders&#x201D; is really a pointer to my email inbox: when I open that folder, &#x76;&#x6f;&#x69;&#x6c;&#xe0;! All the messages that I&#x0027;ve received over night appear.') }}
         </p>
         <p>
         {{ _('But how did that happen? The inbox &#x201C;folder&#x201D; was really just a pointer to an Internet resource that contains more RDF that extends the graph. That &#x201C;Internet resource&#x201D; was a URI that pointed to a CGI script (say, &lt;code&gt;<span>http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&amp;folder=inbox</span>&lt;/code&gt;). The CGI script actually generates <i>serialised RDF</i>, which is basically just a way of formatting a graph into <a href="https://developer.mozilla.org/en-US/docs/XML_introduction">XML</a>:') }}
