--- a/pages/content/amp-dev/about/rdf-in-fifty.html
+++ b/pages/content/amp-dev/about/rdf-in-fifty.html
@@ -24,13 +24,13 @@ flyout:
     </div>
   </section>
 
-  <section class="ap-section --offset">
+  <section class="ap-section --fullscreen">
     <div class="ap-text-block">
       <h1>{{ _('RDF in Fifty Words or Less') }}</h1>
     </div>
   </section>
 
-  <section class="ap-section --col-left">
+  <section class="ap-section --fullscreen">
     <div class="ap-text-block">
       <p>
         {{ _('Okay, so maybe this is a bit more than fifty words, but the key points are pretty simple (and put into <b>bold text</b> for you manager&#x2013;types who just want to get straight to the point). The <a href="https://en.wikipedia.org/wiki/Resource_Description_Framework"><i>Resource Description Framework</i></a>, or &#x201C;RDF&#x201D;, is really two things.') }}
@@ -63,8 +63,8 @@ flyout:
     </div>
   </section>
 
-  <section class="ap-section --col-right">
-    <div class="ap-text-block" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
+  <section class="ap-section --fullscreen">
+    <div class="ap-text-block" amp-fx="fade-in fly-in-right" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
       <h2>
       {{ _('Second, RDF is a serialization syntax. This syntax allows the graph&#x2013;like model to be communicated between &#x201C;agents&#x201D;.') }}
       </h2>
@@ -89,11 +89,12 @@ flyout:
     </div>
   </section>
 
-  <section class="ap-section --left">
+  <section class="ap-section --fullscreen">
     <div class="ap-text-block">
       <p>
       {{ _('Upon receipt of the above monstrosity, the RDF engine folds the RDF into the graph at the appropriate place, and the tree control that actually implements the UI to the bookmarks is notified that it should begin drawing some icons for the latest message about Banana Bread from Aunt Helga.') }}
       </p>
     </div>
   </section>
+
 </main>
