--- a/pages/content/amp-dev/about/rdf-in-fifty.html
+++ b/pages/content/amp-dev/about/rdf-in-fifty.html
@@ -34,17 +34,13 @@ flyout:
           {{ _('Okay, so maybe this is a bit more than fifty words, but the key points are pretty simple (and put into <b>bold text</b> for you manager&#x2013;types who just want to get straight to the point). The <a href="https://en.wikipedia.org/wiki/Resource_Description_Framework"><i>Resource Description Framework</i></a>, or &#x201C;RDF&#x201D;, is really two things.') }}
         </p>
       </div>
-    </div>
 
-    <div class="ap-text-aside-item">
       <div class="ap-text-block" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
         <h2>
         {{ _('First, RDF is a graph&#x2013;based model for describing Internet <i>resources</i> (like web pages and email messages), and how these resources relate to one another.') }}
         </h2>
       </div>
-    </div>
-
-    <div class="ap-text-aside-item">
+      
       <div class="ap-text-block" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
         <p>
         {{ _('But what does that mean, <i>really</i>? To a developer, it means that the RDF data model (the &#x201C;graph&#x201D;) can be used as a mechanism for integrating and organising Internet resources.') }}
@@ -66,16 +62,14 @@ flyout:
     </div>
   </section>
 
-  <section class="ap-section ap-text-aside">
+  <section class="ap-section ap-text-aside --left">
     <div class="ap-text-aside-item">
       <div class="ap-text-block" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
         <h2>
         {{ _('Second, RDF is a serialization syntax. This syntax allows the graph&#x2013;like model to be communicated between &#x201C;agents&#x201D;.') }}
         </h2>
       </div>
-    </div>
 
-    <div class="ap-text-aside-item">
       <div class="ap-text-block" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
         <p>
         {{ _('Okay, what the heck does <i>that</i> mean? Fundamentally, it means that parts of the RDF data model can be communicated across network boundaries, and the contents of the graph can dynamically change as information arrives from a remote service.') }}
@@ -87,10 +81,8 @@ flyout:
         {{ _('But how did that happen? The inbox &#x201C;folder&#x201D; was really just a pointer to an Internet resource that contains more RDF that extends the graph. That &#x201C;Internet resource&#x201D; was a URI that pointed to a CGI script (say, &lt;code&gt;<span>http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&amp;folder=inbox</span>&lt;/code&gt;). The CGI script actually generates <i>serialised RDF</i>, which is basically just a way of formatting a graph into <a href="https://developer.mozilla.org/en-US/docs/XML_introduction">XML</a>:') }}
         </p>
       </div>
-    </div>
 
-    <div class="ap-text-aside-item">
-      <div class="ap-code-snippet">
+      <div class="ap-text-block ap-code-snippet">
 {% set code_snippet = '
   <rdf:RDF
     xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
@@ -140,15 +132,15 @@ flyout:
   {{ markdown.convert('```html\n' + code_snippet + '\n```')|safe }}
     </div>
   </div>
-    
-    <div class="ap-text-aside-item">
+  </section>
+
+  <section class="ap-section ap-text-aside">
+  <div class="ap-text-aside-item">
       <div class="ap-text-block" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
         <p>
         {{ _('Upon receipt of the above monstrosity, the RDF engine folds the RDF into the graph at the appropriate place, and the tree control that actually implements the UI to the bookmarks is notified that it should begin drawing some icons for the latest message about Banana Bread from Aunt Helga.') }}
         </p>
       </div>
     </div>
-    <br><br><br>
   </section>
-<br><br>
 </main>
