--- a/pages/content/amp-dev/about/rdf-in-fifty.html
+++ b/pages/content/amp-dev/about/rdf-in-fifty.html
@@ -82,6 +82,16 @@ flyout:
         </p>
       </div>
 
+      <div class="ap-text-block ap-components-showcase">
+        <div class="ap-components-showcase-demos">
+          {% set showcase_code_path = "/shared/components-showcase/amp-recipe.html" %}
+            <div class="ap-code-snippet">
+              {% set code_snippet = g.doc(showcase_code_path).content %}
+              {{ doc.pod.markdown.convert('```html\n' + code_snippet + '\n```')|safe }}
+            </div>
+        </div>
+      </div>
+<!--
       <div class="ap-text-block ap-code-snippet">
 {% set code_snippet = '
   <rdf:RDF
@@ -131,7 +141,8 @@ flyout:
   {% set markdown = doc.pod.markdown %}
   {{ markdown.convert('```html\n' + code_snippet + '\n```')|safe }}
     </div>
-  </div>
+-->
+    </div>
   </section>
 
   <section class="ap-section ap-text-aside">
