added color=white to target HTML file

--- a/pages/shared/components-showcase/amp-recipe.html
+++ b/pages/shared/components-showcase/amp-recipe.html
@@ -6,7 +6,7 @@
     about="http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&folder=inbox">
     <sm:message id="4025293">
       <sm:recipient>
-        Chris Waterson "waterson@google.com"
+        <span color="white">Chris Waterson "waterson@google.com"</span>
       </sm:recipient>
       <sm:sender>
         Aunt Helga "helga@ancestry.net"
