--- a/pages/shared/components-showcase/amp-recipe.html
+++ b/pages/shared/components-showcase/amp-recipe.html
@@ -6,10 +6,10 @@
     about="http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&folder=inbox">
     <sm:message id="4025293">
       <sm:recipient>
-        <span color="white">Chris Waterson "waterson@google.com"</span>
+          Chris Waterson "waterson@google.com"
       </sm:recipient>
       <sm:sender>
-        Aunt Helga "helga@ancestry.net"
+          <Aunt Helga "helga@ancestry.net">
       </sm:sender>
       <sm:received-by>x-wing.mcom.com</sm:received-by>
       <sm:subject>
