restored single <section>

--- a/pages/content/amp-dev/about/rdf-in-fifty.html
+++ b/pages/content/amp-dev/about/rdf-in-fifty.html
@@ -27,7 +27,7 @@ flyout:
     </div>
   </section>
 
-  <section class="ap-section ap-text-aside --fulscreen">
+  <section class="ap-section ap-text-aside">
     <div class="ap-text-aside-item">
       <div class="ap-text-block">
         <p>
