--- a/pages/shared/components-showcase/amp-recipe.html
+++ b/pages/shared/components-showcase/amp-recipe.html
@@ -5,12 +5,8 @@
   <rdf:Description rdf:nodeID="n-101"
     about="http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&folder=inbox">
     <sm:message id="4025293">
-      <sm:recipient>
-          Chris Waterson "waterson@google.com"
-      </sm:recipient>
-      <sm:sender>
-          <Aunt Helga "helga@ancestry.net">
-      </sm:sender>
+      <sm:recipient>Chris Waterson "waterson@google.com"</sm:recipient>
+      <sm:sender>Aunt Helga "helga@ancestry.net"</sm:sender>
       <sm:received-by>x-wing.mcom.com</sm:received-by>
       <sm:subject>
           Great recipe for Banana Bread
