--- a/pages/shared/components-showcase/amp-recipe.html
+++ b/pages/shared/components-showcase/amp-recipe.html
@@ -1,3 +1,4 @@
+<pre>
 <rdf:RDF
   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
   xmlns:sm="http://www.mozilla.org/smart-mail/schema#">
@@ -36,3 +37,4 @@
     </sm:message>
   </rdf:Description>
 </rdf:RDF>
+</pre>
