repaired RDF doc

--- a/pages/shared/components-showcase/amp-recipe.html
+++ b/pages/shared/components-showcase/amp-recipe.html
@@ -1,7 +1,6 @@
-<pre>
 <rdf:RDF
   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-  xmlns:sm="http://www.mozilla.org/smart-mail/schema#">
+  xmlns:sm="http://www.mozilla.org/smart-mail/schema#"
   xmlns:schema="https://schema.org/">
   <rdf:Description rdf:nodeID="n-101"
     about="http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&folder=inbox">
@@ -37,4 +36,3 @@
     </sm:message>
   </rdf:Description>
 </rdf:RDF>
-</pre>
