removed text-block on RDF structure

--- a/pages/content/amp-dev/about/rdf-in-fifty.html
+++ b/pages/content/amp-dev/about/rdf-in-fifty.html
@@ -1,7 +1,7 @@
 ---
-$title: RDF in Fifty Words or Less
+$title@: RDF in Fifty Words or Less
 $order: 1
-descriptions: RDF in Fifty Words or Less
+descriptions: short description of RDF
 $view: /views/2021/base.html
 
 flyout:
@@ -22,7 +22,9 @@ flyout:
         </div>
       </div>
       <div class="ap-text-block">
-        <h1 class="ap-h1 ap-logo-stage-headline">{{ _('RDF in Fifty Words or Less') }}</h1>
+        <h1 class="ap-h1 ap-logo-stage-headline">
+          {{ _('RDF in Fifty Words or Less') }}
+        </h1>
       </div>
     </div>
   </section>
@@ -56,7 +58,8 @@ flyout:
         </p>
         <p>
         {{ _('The RDF graph provides a perfect data model upon which to build a &#x201C;universal&#x201D; bookmarking service as described above: the graph can contain pointers to arbitrary resources and can group them in just about any way that you can imagine.') }}</p>
-        <p>{{ _('But wait, there&#x0027;s more...') }}
+        <p>
+        {{ _('But wait, there&#x0027;s more...') }}
         </p>
       </div>
 
@@ -78,7 +81,7 @@ flyout:
         </p>
       </div>
 
-      <div class="ap-text-block ap-components-showcase">
+      <div class="ap-components-showcase">
         <div class="ap-components-showcase-demos">
           {% set showcase_code_path = "/shared/components-showcase/amp-recipe.html" %}
             <div class="ap-code-snippet">
