--- a/pages/content/amp-dev/about/rdf-in-fifty.html
+++ b/pages/content/amp-dev/about/rdf-in-fifty.html
@@ -81,14 +81,12 @@ flyout:
         </p>
       </div>
 
-      <div class="ap-components-showcase">
-        <div class="ap-components-showcase-demos">
-          {% set showcase_code_path = "/shared/components-showcase/amp-recipe.html" %}
-            <div class="ap-code-snippet">
-              {% set code_snippet = g.doc(showcase_code_path).content %}
-              {{ doc.pod.markdown.convert('```html\n' + code_snippet + '\n```')|safe }}
-            </div>
-        </div>
+      <div class="ap-text-block">
+        {% set showcase_code_path = "/shared/components-showcase/amp-recipe.html" %}
+          <div class="ap-code-snippet">
+            {% set code_snippet = g.doc(showcase_code_path).content %}
+            {{ doc.pod.markdown.convert('```html\n' + code_snippet + '\n```')|safe }}
+          </div>
       </div>
 
       <div class="ap-text-block" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
