--- a/pages/content/amp-dev/sambo/guide-tutorial/index.html
+++ b/pages/content/amp-dev/sambo/guide-tutorial/index.html
@@ -1,7 +1,7 @@
 ---
 $title: ABC [= format|capitalize =] Guide & Tutorial
 $titles:
-  navigation: Tutorials
+  navigation: Guides
 $view: /views/overview/guides.j2
 $path: /sambo/guide-tutorial/index.html
 $localization:
