--- a/pages/content/amp-dev/about/rdf-in-fifty.html
+++ b/pages/content/amp-dev/about/rdf-in-fifty.html
@@ -30,7 +30,7 @@ flyout:
   </section>
 
   <section class="ap-section ap-text-aside">
-    <div class="ap-text-aside-item">
+    <div class="ap-text-aside-item --start">
       <div class="ap-text-block">
         <p>
           {{ _('Okay, so maybe this is a bit more than fifty words, but the key points are pretty simple (and put into <b>bold text</b> for you manager&#x2013;types who just want to get straight to the point). The <a href="https://en.wikipedia.org/wiki/Resource_Description_Framework"><i>Resource Description Framework</i></a>, or &#x201C;RDF&#x201D;, is really two things.') }}
