--- a/pages/content/amp-dev/about/rdf-in-fifty.html
+++ b/pages/content/amp-dev/about/rdf-in-fifty.html
@@ -6,7 +6,7 @@ $view: /views/2021/base.html
 
 flyout:
   description: Structured data
-  icon: amp-code-archtecture
+  icon: amp-code-architecture
 ---
 
 <main>
