aunt helga - removed escape; changed prep time to PT1H

--- a/pages/shared/components-showcase/amp-recipe.html
+++ b/pages/shared/components-showcase/amp-recipe.html
@@ -11,7 +11,7 @@
       <sm:subject>Great recipe for Banana Bread</sm:subject>
       <sm:body>
         <rdf:Description rdf:nodeID="n-201">
-          <schema:name>Aunt Helga\'s World Famous Banana Bread</schema:name>
+          <schema:name>Aunt Helga's World Famous Banana Bread</schema:name>
           <schema:recipeInstructions>
               Preheat the oven to 350 degrees. Mix in the ingredients in a bowl.
               Add the flour last.
@@ -23,7 +23,7 @@
           <schema:suitableForDiet>http://schema.org/LowFatDiet</schema:suitableForDiet>
           <schema:cookTime>PT1H</schema:cookTime>
           <schema:recipeYield>1 loaf</schema:recipeYield>
-          <schema:prepTime>PT15M</schema:prepTime>
+          <schema:prepTime>PT1H</schema:prepTime>
           <rdf:type rdf:resource="http://schema.org/Recipe"/>
           <schema:nutrition rdf:nodeID="n-202"/>
         </rdf:Description>
