upgraded to jinja-2021

--- a/pages/content/amp-dev/documentation/guides-and-tutorials/index.html
+++ b/pages/content/amp-dev/documentation/guides-and-tutorials/index.html
@@ -82,7 +82,7 @@ guides:
   <p>Here you can find everything you need to build ABC experiences. The sidebar on the left shows you all resources for building <strong>ABC [= format if format !== 'email' else 'emails' =].</strong></p>
 </section>
 
-{% do doc.styles.addCssFile('/css/components/organisms/card-grid.css') %}
+{# {% do doc.styles.addCssFile('/css/components/organisms/card-grid.css') %} #}
 <section class="ap--card-grid">
   <h2 class="ap-o-card-grid-text">ABC's development workflow</h2>
 
