added main to g-t/index

--- a/pages/content/amp-dev/documentation/guides-and-tutorials/index.html
+++ b/pages/content/amp-dev/documentation/guides-and-tutorials/index.html
@@ -77,6 +77,7 @@ guides:
       - /content/amp-dev/documentation/guides-and-tutorials/optimize-measure/configure-analytics/index.md
 
 ---
+<main>
 <section class="ap--section">
   <h1>{{ doc.title }}</h1>
   <p>Here you can find everything you need to build ABC experiences. The sidebar on the left shows you all resources for building <strong>ABC [= format if format !== 'email' else 'emails' =].</strong></p>
@@ -386,3 +387,4 @@ guides:
   </amp-carousel>
   [% endif %]
 </section>
+</main>
