switched index to 2021

--- a/pages/content/amp-dev/documentation/guides-and-tutorials/index.html
+++ b/pages/content/amp-dev/documentation/guides-and-tutorials/index.html
@@ -2,7 +2,7 @@
 $title: ABC [= format|capitalize =] Guides & Tutorials
 $titles:
   navigation: Guides & Tutorials
-$view: /views/overview/guides.j2
+$view: /views/2021/base.html
 $path: /documentation/guides-and-tutorials/index.html
 $localization:
   path: /{locale}/documentation/guides-and-tutorials/index.html
