added nation-usa to ABC Roadshow

--- a/pages/content/amp-dev/events/amp-roadshow.html
+++ b/pages/content/amp-dev/events/amp-roadshow.html
@@ -6,7 +6,7 @@ $view: /views/overview/events.j2
 flyout:
   format: ads
   description: ABC Roadshow
-  icon: wrench
+  icon: nation-usa
 
 roadshow: !g.yaml /shared/data/roadshow.yaml
 
