replaced flag-usa with fast-loading

--- a/pages/content/amp-dev/events/amp-roadshow.html
+++ b/pages/content/amp-dev/events/amp-roadshow.html
@@ -5,7 +5,7 @@ $view: /views/overview/events.j2
 
 flyout:
   description: ABC Roadshow
-  icon: flag-usa
+  icon: fast-loading
 
 roadshow: !g.yaml /shared/data/roadshow.yaml
 
