testing flag-usa

--- a/pages/content/amp-dev/events/amp-roadshow.html
+++ b/pages/content/amp-dev/events/amp-roadshow.html
@@ -5,7 +5,7 @@ $view: /views/overview/events.j2
 
 flyout:
   description: ABC Roadshow
-  icon: fast-loading
+  icon: flag-usa
 
 roadshow: !g.yaml /shared/data/roadshow.yaml
 
