changed blueprint to success-story-detail.j2

--- a/pages/content/amp-dev/runner/success-stories/index.html
+++ b/pages/content/amp-dev/runner/success-stories/index.html
@@ -1,6 +1,5 @@
 ---
 $title@: Success Stories
-# $view: /views/2021/base.html
 $view: /views/custom.j2
 $hidden: true
 $path: /runner/success-stories/index.html
@@ -104,7 +103,7 @@ stage:
   {% set categories = g.categories('/content/amp-dev/runner/success-stories', locale=doc.locale) %}
   <section class="ap--intro ap--container">
     <div class="ap--content">
-      <p>{{ _('Here we feature interesting and outstanding pages that have been published using AMP. We kindly invite you to look through them to see what AMP is capable of.') }}</p>
+      <p>{{ _('Here we feature interesting and outstanding pages that have been published using ABC. We kindly invite you to look through them to see what ABC is capable of.') }}</p>
     </div>
 
     {% do doc.styles.addCssFile('css/components/organisms/filter-bubbles-list.css') %}
