--- a/pages/content/amp-dev/runner/success-stories/index.html
+++ b/pages/content/amp-dev/runner/success-stories/index.html
@@ -130,7 +130,7 @@ stage:
         {% for category, stories in categories %}
         {% for teaser_doc in stories %}
         {# {% include '/views/partials/teaser.j2' %} #}
-        {% include '/views/partials/teaser-ss.j2' %}
+        {% include '/views/partials/teaser.j2' %}
         {% endfor %}
         {% endfor %}
       </div>
