replaced 2021-base with docs-detail

--- a/pages/content/amp-dev/documentation/guides-and-tutorials/start/test/rdf-in-fifty.html
+++ b/pages/content/amp-dev/documentation/guides-and-tutorials/start/test/rdf-in-fifty.html
@@ -1,8 +1,7 @@
 ---
 $title@: RDF in Fifty Words or Less
-$order: 1
 descriptions: short description of RDF
-$view: /views/2021/base.html
+$view: /views/detail/docs-detail.j2
 
 flyout:
   format: ontomatica
